frontend/test/should_fail/computations_decl_use_returns_arguments_mismatch_010.grg
using model_init;

proc() : (boolean)
{
	return(true,false);
}
